PROJECT(graphlayout)

ADD_SUBDIRECTORY(cdt)
ADD_SUBDIRECTORY(cgraph)
ADD_SUBDIRECTORY(circogen)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(dotgen)
ADD_SUBDIRECTORY(fdpgen)
ADD_SUBDIRECTORY(gvc)
ADD_SUBDIRECTORY(label)
ADD_SUBDIRECTORY(neatogen)
ADD_SUBDIRECTORY(ortho)
ADD_SUBDIRECTORY(osage)
ADD_SUBDIRECTORY(pack)
ADD_SUBDIRECTORY(patchwork)
ADD_SUBDIRECTORY(pathplan)
ADD_SUBDIRECTORY(sfdpgen)
ADD_SUBDIRECTORY(sparse)
ADD_SUBDIRECTORY(twopigen)
ADD_SUBDIRECTORY(vpsc)
ADD_SUBDIRECTORY(xdot)